@@ -1,3 +1,8 @@
+2007-04-16  Xan Lopez  <xan.lopez@nokia.com>
+
+	* src/sapwood-draw.c (draw_simple_image): Don't take internal children
+	into account for the position theming.
+
 2007-04-13  Xan Lopez  <xan.lopez@nokia.com>
 
 	* src/sapwood-draw.c: Add general positioning theming based on GTK+
